deploy/minikube/infra/petunia-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/enable-websocket: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: petunia
spec:
  ingressClassName: nginx
  rules:
  - host: keycloak
    http:
      paths:
      - backend:
          service:
            name: keycloak
            port:
              number: 8080
        path: /
        pathType: Prefix
  - host: petunia
    http:
      paths:
        - backend:
            service:
              name: alpicola
              port:
                number: 80
          path: /
          pathType: Prefix
